Fix Vertical Alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,6 @@
   margin-left: 0.7em;
 
   color: #FA80A4;
-  line-height: 50vw;
 
   text-align: center;
   
@@ -23,6 +22,15 @@
 @keyframes letter-spacing {
   0%   { letter-spacing: 0em; margin-left: 0em;}
   100% { letter-spacing: 0.7em; margin-left: 0.7em;}
+}
+
+.container{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  position: fixed;
+  align-items: center;
+  justify-content: center;
 }
 
 body {
